--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "erc20-token",
+  "name": "Proof of existence",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
